--- a/numpy-1.ipynb
+++ b/numpy-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([         0,          1,          4, ..., -733379959, -731379964,\n",
+       "       -729379967])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#array supports element wise operations\n",
     "arr1 = np.array(range(1000000))\n",
@@ -23,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list operation time is 15.835924625396729\n",
-      "Array operation time is 9.162864446640015\n"
+      "list operation time is 12.598976850509644\n",
+      "Array operation time is 7.907897472381592\n"
      ]
     }
    ],
@@ -39,13 +51,13 @@
     "#proving that numpy is faster\n",
     "import time\n",
     "st = time.time()\n",
-    "list1 = list(range(100000000))\n",
+    "list1 = list(range(1000000))\n",
     "list1 = [i**2 for i in list1]\n",
     "et = time.time()\n",
     "print(f\"list operation time is {et-st}\")\n",
     "\n",
     "st = time.time()\n",
-    "arr1 = np.array(range(100000000))\n",
+    "arr1 = np.array(range(1000000))\n",
     "arr1**2\n",
     "et = time.time()\n",
     "print(f\"Array operation time is {et-st}\")"
@@ -60,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +132,7 @@
        "(10,)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +154,7 @@
        "array([1, 3])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +175,7 @@
        "array([1. , 1.5, 2. , 2.5, 3. , 3.5, 4. , 4.5])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +197,7 @@
        "array([  0, 100, 100,   3,   4])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +296,39 @@
     "print(arr.dtype)\n",
     "arr = arr.astype('int')\n",
     "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "0\n",
+      "11\n",
+      "[2 3 6]\n",
+      "[2 3 6 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.arange(12)\n",
+    "print(m)\n",
+    "print(m[0])\n",
+    "print(m[-1])\n",
+    "print(m[[2,3,6]]) #accessing multiple elements with indexing\n",
+    "print(m[[2,3,6,3]])"
    ]
   },
   {
