--- a/Netflix_Business_Case_Study.ipynb
+++ b/Netflix_Business_Case_Study.ipynb
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
        "Index([114507, 120566, 120775], dtype='int64')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1876,7 @@
        "[114507, 120566, 120775]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,14 +1887,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Vaibhav\\AppData\\Local\\Temp\\ipykernel_26584\\4083461812.py:1: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\Vaibhav\\AppData\\Local\\Temp\\ipykernel_14332\\4083461812.py:1: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -1905,7 +1905,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df.duration[df[df.duration.isna()].index.tolist()] = df.rating[df[df.duration.isna()].index.tolist()]\n",
-      "C:\\Users\\Vaibhav\\AppData\\Local\\Temp\\ipykernel_26584\\4083461812.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Vaibhav\\AppData\\Local\\Temp\\ipykernel_14332\\4083461812.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1945,7 @@
        " 'UR']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2048,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2165,7 @@
        "[738 rows x 2 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2176,22 +2176,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002F3EE0C56D0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002B2DDA7CA10>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby('director')[['title','director','cast']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "show_id             0\n",
+       "type                0\n",
+       "title               0\n",
+       "date_added          0\n",
+       "release_year        0\n",
+       "rating              0\n",
+       "duration            0\n",
+       "description         0\n",
+       "director        50643\n",
+       "cast             2149\n",
+       "country         11897\n",
+       "listed_in           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>director</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>show_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aaron Moorhead</td>\n",
+       "      <td>Ally Ioannides</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aaron Moorhead</td>\n",
+       "      <td>Bill Oberst Jr.</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aaron Moorhead</td>\n",
+       "      <td>Callie Hernandez</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aaron Moorhead</td>\n",
+       "      <td>James Jordan</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aaron Moorhead</td>\n",
+       "      <td>Jamie Dornan</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48654</th>\n",
+       "      <td>Şenol Sönmez</td>\n",
+       "      <td>Yosi Mizrahi</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48655</th>\n",
+       "      <td>Şenol Sönmez</td>\n",
+       "      <td>Zerrin Sümer</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48656</th>\n",
+       "      <td>Şenol Sönmez</td>\n",
+       "      <td>Özgür Emre Yıldırım</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48657</th>\n",
+       "      <td>Şenol Sönmez</td>\n",
+       "      <td>Ali Sunal</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48658</th>\n",
+       "      <td>Şenol Sönmez</td>\n",
+       "      <td>Murat Boz</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>48659 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              director                  cast  show_id\n",
+       "0       Aaron Moorhead        Ally Ioannides        1\n",
+       "1       Aaron Moorhead       Bill Oberst Jr.        1\n",
+       "2       Aaron Moorhead      Callie Hernandez        1\n",
+       "3       Aaron Moorhead          James Jordan        1\n",
+       "4       Aaron Moorhead          Jamie Dornan        1\n",
+       "...                ...                   ...      ...\n",
+       "48654     Şenol Sönmez          Yosi Mizrahi        1\n",
+       "48655     Şenol Sönmez          Zerrin Sümer        1\n",
+       "48656     Şenol Sönmez   Özgür Emre Yıldırım        1\n",
+       "48657     Şenol Sönmez             Ali Sunal        1\n",
+       "48658     Şenol Sönmez             Murat Boz        1\n",
+       "\n",
+       "[48659 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['director','cast']).agg({'show_id':\"nunique\"}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "s = df.groupby(\"type\").agg({'show_id':\"nunique\"})\n",
+    "# sns.barplot(s.value_counts) "
    ]
   },
   {
